--- a/frontend/src/pages/login.css
+++ b/frontend/src/pages/login.css
@@ -45,7 +45,7 @@ p {
 }
 
 form input {
-  width: 100%;
+  width: 290px;
   max-width: 100%;
   padding: 10px 20px;
   margin: 0.5rem 0;
@@ -65,7 +65,7 @@ form input {
 
 .toggle-password {
   position: absolute;
-  right: -20px;
+  right: 20px;
   top: 50%;
   transform: translateY(-50%);
   cursor: pointer;
